Fix height issue on mobile

--- a/src/PageLayout.css
+++ b/src/PageLayout.css
@@ -1,7 +1,11 @@
 .page-layout {
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .control-bar {
